--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Generate README.md
-      uses: teoxoy/profile-readme-stats@v1.2
+      uses: teoxoy/profile-readme-stats@master
       with:
         token: ${{ secrets.USER_TOKEN }}
     - name: Update README.md
